# dune-pkg-repro

./: dune-project
dev-tools.locks/ocaml-lsp-server/: lock.dune
dune.lock/: ca-certs.pkg  caqti-driver-sqlite3.pkg  caqti-lwt.pkg  caqti.pkg  conduit-lwt-unix.pkg  conf-libpcre.pkg  conf-sqlite3.pkg  dotenv.pkg  dream.pkg  lock.dune  lwt.pkg  mirage-crypto-rng-lwt.pkg  pcre.pkg  pg_query.pkg  ppx_rapper.pkg  ppx_rapper_lwt.pkg  spotify_ml.pkg  sqlite3.pkg
lib/: dune
test/: dune
